--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
 		"react-native": "0.47.1",
 		"react-native-circular-action-menu": "^0.4.0",
 		"react-native-floating-action": "^1.1.0",
+		"react-native-snap-carousel": "^2.4.0",
 		"react-native-swiper": "^1.5.7",
 		"react-native-vector-icons": "^4.3.0",
-		"react-navigation": "^1.0.0-beta.11"
+		"react-native-viewpager": "^0.2.13",
+		"react-navigation": "^1.0.0-beta.11",
+		"react-redux": "^5.0.6",
+		"redux": "^3.7.2"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
 		"babel-preset-react-native": "2.1.0",
 		"jest": "20.0.4",
+		"react-native-swipe-a-lot": "^0.2.1",
 		"react-test-renderer": "16.0.0-alpha.12"
 	},
 	"jest": {
